--- a/Task13.html
+++ b/Task13.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <label>First Name:</label><br>
-<input type="text" name="name" id="name" placeholder="name"><br>
+<input type="text" name="Name" id="name" placeholder="name"><br>
 <button id="submitbutton">Submit</button><br>
 
 <script>
